# ncs-serlcd-tester

./: .clang-format  .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  README.md  nrf52840dk_nrf52840.overlay  prj.conf
src/: main.c
